--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>LoveLive! 2nd トーナメント</title>
@@ -14,7 +14,7 @@
   <script src="scripts/main.js" defer></script>
 </head>
 
-<body id="ll-top-page">
+<body>
 <header id="ll-header" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -32,7 +32,7 @@
   <nav id="ll-nav" class="navbar navbar-inverse">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Top</a></li>
+        <li class="active ll-active"><a href="/">Top</a></li>
         <li><a href="livestage.html">Live stage</a></li>
         <li><a href="#">Outline</a></li>
         <li><a href="#">Schedule</a></li>
@@ -44,13 +44,13 @@
   </nav>
 </header>
 
-<main>
-  <div class="js_slides ll-slides">
-    <img src="images/image_01.jpg" alt="">
-    <img src="images/image_02.jpg" alt="">
+<main id="ll-top-page-contents">
+  <div class="js-slides ll-slides">
+    <img src="images/image_01.jpg" alt="ラブライブ！ 2nd グランプリ μ's">
+    <img src="images/image_02.jpg" alt="ラブライブ！ 1st グランプリ A-RISE">
   </div>
 
-  <ol class="js_slides-pagination ll-slides-pagination">
+  <ol class="js-slides-pagination ll-slides-pagination">
     <li>●</li>
     <li>●</li>
   </ol>
