--- a/book/ch03.html
+++ b/book/ch03.html
@@ -61,44 +61,8 @@
 </p>
 </div>
 
-<h2><a id="h3-2"></a><span class="secno">3.2　</span>ファイル構成</h2>
-<p>今回作成するサイトのファイル構成を考えると図のようになります。<tt>index.html</tt>はトップページ、<tt>livestage.html</tt>はライブステージページ用のHTMLとなります。ディレクトリーとしては<tt>external</tt>・<tt>styles</tt>・<tt>scripts</tt>・<tt>images</tt>の4つがあり、その中に各ファイルを置く想定です。</p>
-<div class="emlist-code">
-<pre class="emlist">/
-├- index.html
-├- livestage.html
-├- external
-├- styles
-│  └ main.css
-├- scripts
-│  └ index.js
-└- images
-   ├- image_01.jpg
-   └- ...
-</pre>
-</div>
-<p>各ディレクトリーには、以下の規則に則ってファイルを置きます。</p>
-<ul>
-<li>external<ul>
-<li>CSS・JavaScript問わず、ライブラリを置くディレクトリー</li>
-</ul>
-</li>
-<li>styles<ul>
-<li>CSSファイルを置くディレクトリー</li>
-</ul>
-</li>
-<li>scripts<ul>
-<li>JavaScriptファイルを置くディレクトリー</li>
-</ul>
-</li>
-<li>images<ul>
-<li>画像ファイルを置くディレクトリー</li>
-</ul>
-</li>
-</ul>
-
-<h2><a id="h3-3"></a><span class="secno">3.3　</span>基本構造のマークアップ</h2>
-<p>それでは実際にHTMLでサイトの構造を作っていきます。はじめに<tt>DOCTYPE</tt>というものを書きます。この<tt>DOCTYPE</tt>ですが、過去の経緯から書くことが必須となっています。</p>
+<h2><a id="h3-2"></a><span class="secno">3.2　</span>基本構造のマークアップ</h2>
+<p>それでは実際にHTMLでサイトの構造を作っていきます。はじめにHTMLファイルを<tt>index.html</tt>という名前で任意のディレクトリーに作ります。HTMLファイルを作り終わったら<tt>DOCTYPE</tt>というものを書きます。<tt>DOCTYPE</tt>は過去の経緯から書くことが必須となっています。</p>
 <p><tt>html</tt>要素内には<tt>head</tt>要素と<tt>body</tt>要素が含まれます。<tt>head</tt>要素内には<tt>title</tt>要素や<tt>meta</tt>要素でサイト情報を書いていきます。また、CSSやJavaScriptの読み込みも<tt>head</tt>要素内でおこないます。</p>
 <p><tt>body</tt>要素内にはこのページの内容を書いていきます。<tt>body</tt>要素内にある<tt>main</tt>要素はサイトの主要な内容を示すものとなります。</p>
 <p>なお<tt>main</tt>要素で<tt>role</tt>属性の値に<tt>main</tt>を指定していますが、これは<a href="http://caniuse.com/#feat=html5semantic" class="link">IE11がmain要素をサポートしていない</a>ためです。そのため<tt>role</tt>属性で<tt>main</tt>を指定して、サイトの主要な内容だということをIE11にも伝える意図で指定しています。</p>
@@ -113,8 +77,11 @@
   &lt;meta name=&quot;keywords&quot; content=&quot;ラブライブ,特設サイト&quot;&gt;
   &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width&quot;&gt;
   &lt;link rel=&quot;stylesheet&quot; href=&quot;external/Nico/bootstrap.min.css&quot;&gt;
+  &lt;link rel=&quot;stylesheet&quot; href=&quot;external/slick/slick.css&quot;&gt;
   &lt;link rel=&quot;stylesheet&quot; href=&quot;styles/main.css&quot;&gt;
-  &lt;script src=&quot;external/lory/lory.min.js&quot; defer&gt;&lt;/script&gt;
+  &lt;script src=&quot;external/jquery/jquery-2.1.4.min.js&quot; defer&gt;&lt;/script&gt;
+  &lt;script src=&quot;external/slick/slick.min.js&quot; defer&gt;&lt;/script&gt;
+  &lt;script src=&quot;scripts/main.js&quot; defer&gt;&lt;/script&gt;
 &lt;/head&gt;
 
 &lt;body&gt;
@@ -125,8 +92,8 @@
 </pre>
 </div>
 
-<h2><a id="h3-4"></a><span class="secno">3.4　</span>ヘッダーのマークアップ</h2>
-<p>基礎部分のマークアップが終わったので、次にヘッダーをマークアップしていきます。ヘッダーにはサイトのタイトルロゴと、メールマガジンやSNS、ヘルプなどのリンクがあります。</p>
+<h2><a id="h3-3"></a><span class="secno">3.3　</span>ヘッダーのマークアップ</h2>
+<p>基礎部分のマークアップが終わったので、<tt>body</tt>要素内にヘッダーをマークアップしていきます。ヘッダーにはサイトのタイトルロゴと、メールマガジンやSNS、ヘルプなどのリンクがあります。</p>
 <p>今回はCSSライブラリとしてBootstrapのテーマであるNicoを使っているため、各要素の<tt>class</tt>属性にBootstrapで定義されているクラス名を定義します。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;header id=&quot;ll-header&quot; class=&quot;navbar navbar-default&quot;&gt;
@@ -156,8 +123,8 @@
 </pre>
 </div>
 
-<h2><a id="h3-5"></a><span class="secno">3.5　</span>グローバルナビゲーションのマークアップ</h2>
-<p>グローバルナビゲーションは、サイト内の主要なページへリンクしているものです。</p>
+<h2><a id="h3-4"></a><span class="secno">3.4　</span>グローバルナビゲーションのマークアップ</h2>
+<p>グローバルナビゲーションは、サイト内の主要なページへリンクしているものです。このグローバルナビゲーションを<tt>header</tt>要素内にマークアップしていきます。</p>
 <p>はじめに<tt>nav</tt>要素で全体を囲みます。<tt>nav</tt>要素は主要なページへリンクしている箇所で使われる要素となります。各要素の<tt>class</tt>属性にはBootstrapで定義されているクラス名を定義します。先ほどと同じく今回作らないページについては、図のように<tt>a</tt>要素の<tt>href</tt>属性に<tt>#</tt>を入れておきます。</p>
 <p>現在見ているページを示すためのクラス名として、Top部分に<tt>ll-active</tt>というクラス名を付けています。<tt>ll-active</tt>内でBootstrapが<tt>active</tt>に対してスタイル定義しているところを上書きします。</p>
 <div class="emlist-code">
@@ -177,8 +144,8 @@
 </pre>
 </div>
 
-<h2><a id="h3-6"></a><span class="secno">3.6　</span>フッターのマークアップ</h2>
-<p>フッターには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。</p>
+<h2><a id="h3-5"></a><span class="secno">3.5　</span>フッターのマークアップ</h2>
+<p>フッターには著作権情報やプライバシーポリシー、サイトマップといったリンクを追加します。フッターも<tt>body</tt>要素内にマークアップしていきます。</p>
 <p>アニメのキャプチャ画像を見ると、フッター部分には「●○○○○」のような表示があります。これはページネーションといわれる、ある要素内にどれだけの要素が内包されているかを示すものです。しかしフッター内にページネーションを含めるのは一般的でないため、特にマークアップしません。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;footer id=&quot;ll-footer&quot; class=&quot;navbar navbar-default&quot;&gt;
@@ -196,7 +163,7 @@
 </pre>
 </div>
 
-<h2><a id="h3-7"></a><span class="secno">3.7　</span>HTMLのまとめ</h2>
+<h2><a id="h3-6"></a><span class="secno">3.6　</span>HTMLのまとめ</h2>
 <p>ここまでをまとめると、次のHTMLになります。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;!DOCTYPE html&gt;
@@ -208,8 +175,11 @@
   &lt;meta name=&quot;keywords&quot; content=&quot;ラブライブ,特設サイト&quot;&gt;
   &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width&quot;&gt;
   &lt;link rel=&quot;stylesheet&quot; href=&quot;external/Nico/bootstrap.min.css&quot;&gt;
+  &lt;link rel=&quot;stylesheet&quot; href=&quot;external/slick/slick.css&quot;&gt;
   &lt;link rel=&quot;stylesheet&quot; href=&quot;styles/main.css&quot;&gt;
-  &lt;script src=&quot;external/lory/lory.min.js&quot; defer&gt;&lt;/script&gt;
+  &lt;script src=&quot;external/jquery/jquery-2.1.4.min.js&quot; defer&gt;&lt;/script&gt;
+  &lt;script src=&quot;external/slick/slick.min.js&quot; defer&gt;&lt;/script&gt;
+  &lt;script src=&quot;scripts/main.js&quot; defer&gt;&lt;/script&gt;
 &lt;/head&gt;
 
 &lt;body&gt;
@@ -269,8 +239,8 @@
 </p>
 </div>
 
-<h2><a id="h3-8"></a><span class="secno">3.8　</span>ヘッダーの見た目をよくする</h2>
-<p>CSSでヘッダーの下部にある隙間を無くします。これは<tt>margin-bottom: 0;</tt>とするだけで下部の隙間がなくなります。</p>
+<h2><a id="h3-7"></a><span class="secno">3.7　</span>ヘッダーの見た目をよくする</h2>
+<p>はじめに<tt>index.html</tt>が置いてあるディレクトリーと同じ場所に<tt>styles</tt>ディレクトリーを作り、その中にCSSファイルを<tt>main.css</tt>という名前で作ります。CSSファイルを作り終わったら見た目を整えていきます。CSSでヘッダーの下部にある隙間を無くします。これは<tt>margin-bottom: 0;</tt>とするだけで下部の隙間がなくなります。</p>
 <p>間延びしたようなスタイルとなっているロゴ部分のスタイルも調整します。これは要素の高さ調整と<tt>margin</tt>・<tt>padding</tt>を使って要素内外にある隙間を調整すれば、間延びした見た目ではなくなります。</p>
 <div class="emlist-code">
 <pre class="emlist">/* サイトのヘッダー */
@@ -287,7 +257,7 @@
 </pre>
 </div>
 
-<h2><a id="h3-9"></a><span class="secno">3.9　</span>グローバルナビゲーションの見た目をよくする</h2>
+<h2><a id="h3-8"></a><span class="secno">3.8　</span>グローバルナビゲーションの見た目をよくする</h2>
 <p>グローバルナビゲーションへスタイルを適用します。グローバルナビゲーションは、Bootstrapのスタイル定義をそのまま使った場合、高さがそれなりにあります。これをラブライブ！参加者募集サイトの見た目に合わせるため、<tt>min-height: 0;</tt>と指定して、グローバルナビゲーションの高さを狭めておきます。</p>
 <p>今回のラブライブ！参加者募集サイトは、全て大文字でグローバルナビゲーション内の文字が書かれています。そのためグローバルナビゲーション内の各要素に対し<tt>text-transform: uppercase;</tt>と指定して、グローバルナビゲーション内の文字を全て大文字にします。他のスタイル定義に関しては、Bootstrapで定義されているスタイルを打ち消すための指定となります。</p>
 <div class="emlist-code">
@@ -311,15 +281,39 @@
   color: #fff;
   text-transform: uppercase;
 }
-/* 横幅が768px以上のときの設定 */
+</pre>
+</div>
+<p>ウィンドウ幅を狭めたときにグローバルナビゲーションの表示が崩れないよう、各ウィンドウ幅ごとにスタイルを定義しておきます。主に要素の内側の余白を細かく定義します。</p>
+<div class="emlist-code">
+<pre class="emlist">/* グローバルナビゲーションの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
   #ll-nav li &gt; a {
-    padding: 0.75em 5em;
+    padding: 0.75em 1.5em;
     border-right: 1px solid #fff;
   }
 
   #ll-nav li:first-child &gt; a {
     border-left: 1px solid #fff;
+  }
+}
+@media (min-width: 890px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 2em;
+  }
+}
+@media (min-width: 992px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 2.5em;
+  }
+}
+@media (min-width: 1150px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 3.2em;
+  }
+}
+@media (min-width: 1330px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 4em;
   }
 }
 </pre>
@@ -336,7 +330,7 @@
 }
 </pre>
 </div>
-<p>最後に現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます。これで共通構造のマークアップは終わりです。</p>
+<p>現在開いているページをグローバルナビゲーション上で分かりやすくするため、下部に黄色の線を引きます。</p>
 <div class="emlist-code">
 <pre class="emlist">/* グローバルナビゲーションの現在位置を示すスタイル */
 #ll-nav .ll-active &gt; a::after {
@@ -350,6 +344,17 @@
 }
 </pre>
 </div>
+
+<h2><a id="h3-9"></a><span class="secno">3.9　</span>フッターの見た目をよくする</h2>
+<p>最後にフッターへスタイルを適用します。Bootstrapで定義されている要素外側の余白を打ち消します。</p>
+<div class="emlist-code">
+<pre class="emlist">/* サイトのフッター */
+#ll-footer {
+  margin-bottom: 0;
+}
+</pre>
+</div>
+<p>これで共通構造のマークアップは終わりです。</p>
 
 <h2><a id="h3-10"></a><span class="secno">3.10　</span>CSSのまとめ</h2>
 <p>ここまでをまとめると、次のCSSになります。</p>
@@ -386,15 +391,35 @@
   color: #fff;
   text-transform: uppercase;
 }
-/* 横幅が768px以上のときの設定 */
+/* グローバルナビゲーションの各ウィンドウ幅ごとのスタイル定義 */
 @media (min-width: 768px) {
   #ll-nav li &gt; a {
-    padding: 0.75em 5em;
+    padding: 0.75em 1.5em;
     border-right: 1px solid #fff;
   }
 
   #ll-nav li:first-child &gt; a {
     border-left: 1px solid #fff;
+  }
+}
+@media (min-width: 890px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 2em;
+  }
+}
+@media (min-width: 992px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 2.5em;
+  }
+}
+@media (min-width: 1150px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 3.2em;
+  }
+}
+@media (min-width: 1330px) {
+  #ll-nav li &gt; a {
+    padding: 0.75em 4em;
   }
 }
 
@@ -416,6 +441,11 @@
   left: 0;
   width: 100%;
   border-bottom: 5px solid #ffdc00;
+}
+
+/* サイトのフッター */
+#ll-footer {
+  margin-bottom: 0;
 }
 </pre>
 </div>
