--- a/book/ch05.html
+++ b/book/ch05.html
@@ -37,8 +37,17 @@
 
             <h1><a id="h5"></a><span class="secno">第5章　</span>ライブステージページを作る</h1>
 <p>共通の構造部分とトップページをここまで作っていきました。この章ではライブステージページを作っていきます。ライブステージページもトップページと同じく<tt>main</tt>要素の中をHTMLでマークアップしていきます。</p>
+<p>はじめにHTMLファイルを<tt>livestage.html</tt>という名前で<tt>index.html</tt>を置いたディレクトリーに作ります。<tt>index.html</tt>をコピー&amp;ペーストし、<tt>livestage.html</tt>の<tt>main</tt>要素内を全て消してから作業すると効率がいいです。</p>
 
-<h2><a id="h5-1"></a><span class="secno">5.1　</span>動画部分のマークアップ</h2>
+<h2><a id="h5-1"></a><span class="secno">5.1　</span>main要素にライブステージページと分かるようなIDを付ける</h2>
+<p>はじめに<tt>main</tt>要素へライブステージページと分かるようなIDを次のように付けます。</p>
+<div class="emlist-code">
+<pre class="emlist">&lt;main id=&quot;ll-livestage-page-contents&quot;&gt;
+&lt;/main&gt;
+</pre>
+</div>
+
+<h2><a id="h5-2"></a><span class="secno">5.2　</span>動画部分のマークアップ</h2>
 <p>動画部分のマークアップをしていきます。アーティスト名と曲名部分にCSSを適用させるため、それぞれ<tt>span</tt>要素で括ります。</p>
 <p>今回動画はYouTubeにあるものを使います。YouTubeの動画をページ内へ埋め込む方法は図のようにYouTubeの「共有」内の「埋め込みコード」をコピーしてHTML内に貼り付けます。</p>
 <div id="video-share" class="image">
@@ -61,7 +70,7 @@
 </pre>
 </div>
 
-<h2><a id="h5-2"></a><span class="secno">5.2　</span>動画情報部分のマークアップ</h2>
+<h2><a id="h5-3"></a><span class="secno">5.3　</span>動画情報部分のマークアップ</h2>
 <p>動画情報部分は今回コメント部分のみを実装します。コメントの実装はTwitterのハッシュタグ検索ウィジェットを使って、擬似的にコメントを再現します。動画情報のCommentタブを目立たせるために、グローバルナビゲーションと同じく<tt>ll-active</tt>というクラス名を付けます。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;col-md-3 col-sm-6 ll-video-detail&quot;&gt;
@@ -73,11 +82,12 @@
   &lt;/ul&gt;
 
   &lt;a class=&quot;twitter-timeline&quot; data-dnt=&quot;true&quot; href=&quot;https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96&quot; data-widget-id=&quot;620242924207386625&quot;&gt;#ラブライブ のツイート&lt;/a&gt;
+  &lt;script id=&quot;twitter-wjs&quot; src=&quot;https://platform.twitter.com/widgets.js&quot; async&gt;&lt;/script&gt;
 &lt;/div&gt;
 </pre>
 </div>
 
-<h2><a id="h5-3"></a><span class="secno">5.3　</span>広告部分のマークアップ</h2>
+<h2><a id="h5-4"></a><span class="secno">5.4　</span>広告部分のマークアップ</h2>
 <p>続いて広告部分のマークアップをしていきます。基本はBootstrapで定義されているクラス名をHTMLに書いていくのみとなります。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;col-md-3 col-sm-6 ll-livestage-ad&quot;&gt;
@@ -109,7 +119,7 @@
 &lt;/div&gt;
 </pre>
 </div>
-<p>最後にライブステージページで書いたHTMLを次のHTMLで全体を囲ったら完成です。</p>
+<p>最後に今まで書いたHTMLの全体（<tt>main</tt>要素は除く）を次のHTMLで囲ったら完成です。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;container-fluid&quot;&gt;
   &lt;div class=&quot;row&quot;&gt;
@@ -118,69 +128,73 @@
 </pre>
 </div>
 
-<h2><a id="h5-4"></a><span class="secno">5.4　</span>HTMLのまとめ</h2>
+<h2><a id="h5-5"></a><span class="secno">5.5　</span>HTMLのまとめ</h2>
 <p>ここまでをまとめると、次のHTMLになります。</p>
 <div class="emlist-code">
-<pre class="emlist">&lt;div class=&quot;container-fluid&quot;&gt;
-  &lt;div class=&quot;row&quot;&gt;
-    &lt;div class=&quot;col-md-6&quot;&gt;
-      &lt;h2 class=&quot;ll-video-title-and-artist&quot;&gt;
-        &lt;span class=&quot;ll-video-artist&quot;&gt;μ's&lt;/span&gt;&lt;span class=&quot;ll-video-title&quot;&gt;Angelic Angel&lt;/span&gt;
-      &lt;/h2&gt;
-      &lt;div class=&quot;ll-live-video&quot;&gt;
-        &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/oWIE7GwJu3c&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;
+<pre class="emlist">&lt;main id=&quot;ll-livestage-page-contents&quot;&gt;
+  &lt;div class=&quot;container-fluid&quot;&gt;
+    &lt;div class=&quot;row&quot;&gt;
+      &lt;div class=&quot;col-md-6&quot;&gt;
+        &lt;h2 class=&quot;ll-video-title-and-artist&quot;&gt;
+          &lt;span class=&quot;ll-video-artist&quot;&gt;μ's&lt;/span&gt;&lt;span class=&quot;ll-video-title&quot;&gt;Angelic Angel&lt;/span&gt;
+        &lt;/h2&gt;
+
+        &lt;div class=&quot;ll-live-video&quot;&gt;
+          &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/oWIE7GwJu3c&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;
+        &lt;/div&gt;
       &lt;/div&gt;
-    &lt;/div&gt;
 
-    &lt;div class=&quot;col-md-3 col-sm-6 ll-video-detail&quot;&gt;
-      &lt;ul class=&quot;nav nav-tabs nav-justified ll-video-tabs&quot;&gt;
-        &lt;li&gt;&lt;a href=&quot;&quot;&gt;Status&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href=&quot;&quot;&gt;Like&lt;/a&gt;&lt;/li&gt;
-        &lt;li class=&quot;active ll-active&quot;&gt;&lt;a href=&quot;&quot;&gt;Comment&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href=&quot;&quot;&gt;Settings&lt;/a&gt;&lt;/li&gt;
-      &lt;/ul&gt;
+      &lt;div class=&quot;col-md-3 col-sm-6 ll-video-detail&quot;&gt;
+        &lt;ul class=&quot;nav nav-tabs nav-justified ll-video-tabs&quot;&gt;
+          &lt;li&gt;&lt;a href=&quot;&quot;&gt;Status&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href=&quot;&quot;&gt;Like&lt;/a&gt;&lt;/li&gt;
+          &lt;li class=&quot;active ll-active&quot;&gt;&lt;a href=&quot;&quot;&gt;Comment&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href=&quot;&quot;&gt;Settings&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
 
-      &lt;a class=&quot;twitter-timeline&quot; data-dnt=&quot;true&quot; href=&quot;https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96&quot; data-widget-id=&quot;620242924207386625&quot;&gt;#ラブライブ のツイート&lt;/a&gt;
-    &lt;/div&gt;
+        &lt;a class=&quot;twitter-timeline&quot; data-dnt=&quot;true&quot; href=&quot;https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96&quot; data-widget-id=&quot;620242924207386625&quot;&gt;#ラブライブ のツイート&lt;/a&gt;
+        &lt;script id=&quot;twitter-wjs&quot; src=&quot;https://platform.twitter.com/widgets.js&quot; async&gt;&lt;/script&gt;
+      &lt;/div&gt;
 
-    &lt;div class=&quot;col-md-3 col-sm-6 ll-livestage-ad&quot;&gt;
-      &lt;h2 class=&quot;ll-ad-title&quot;&gt;
-        Ad
-      &lt;/h2&gt;
+      &lt;div class=&quot;col-md-3 col-sm-6 ll-livestage-ad&quot;&gt;
+        &lt;h2 class=&quot;ll-ad-title&quot;&gt;
+          Ad
+        &lt;/h2&gt;
 
-      &lt;div class=&quot;list-group&quot;&gt;
-        &lt;a href=&quot;https://github.com/kubosho/Nico&quot; class=&quot;list-group-item&quot;&gt;
-          &lt;div class=&quot;list-group-item-heading&quot;&gt;
-            Nico
-          &lt;/div&gt;
+        &lt;div class=&quot;list-group&quot;&gt;
+          &lt;a href=&quot;https://github.com/kubosho/Nico&quot; class=&quot;list-group-item&quot;&gt;
+            &lt;div class=&quot;list-group-item-heading&quot;&gt;
+              Nico
+            &lt;/div&gt;
 
-          &lt;p class=&quot;list-group-item-text&quot;&gt;
-            &quot;Nico&quot; a fork of &quot;Honoka&quot; which is a Bootstrap theme.
-          &lt;/p&gt;
-        &lt;/a&gt;
+            &lt;p class=&quot;list-group-item-text&quot;&gt;
+              &quot;Nico&quot; a fork of &quot;Honoka&quot; which is a Bootstrap theme.
+            &lt;/p&gt;
+          &lt;/a&gt;
 
-        &lt;a href=&quot;https://github.com/kubosho/kotori&quot; class=&quot;list-group-item&quot;&gt;
-          &lt;div class=&quot;list-group-item-heading&quot;&gt;
-            Kotori
-          &lt;/div&gt;
+          &lt;a href=&quot;https://github.com/kubosho/kotori&quot; class=&quot;list-group-item&quot;&gt;
+            &lt;div class=&quot;list-group-item-heading&quot;&gt;
+              Kotori
+            &lt;/div&gt;
 
-          &lt;p class=&quot;list-group-item-text&quot;&gt;
-            A tool that automatically format and evaluate for CSS.
-          &lt;/p&gt;
-        &lt;/a&gt;
+            &lt;p class=&quot;list-group-item-text&quot;&gt;
+              A tool that automatically format and evaluate for CSS.
+            &lt;/p&gt;
+          &lt;/a&gt;
+        &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt;
+&lt;/main&gt;
 </pre>
 </div>
 
-<h2><a id="h5-5"></a><span class="secno">5.5　</span>ライブステージページ全体の見た目を整える</h2>
-<p>はじめにライブステージページ全体へ関わるスタイルを適用します。</p>
+<h2><a id="h5-6"></a><span class="secno">5.6　</span>ライブステージページ全体の見た目を整える</h2>
+<p>HTMLによるマークアップが終わったらCSSで見た目を整えていきます。はじめにライブステージページ全体へ関わるスタイルを適用します。</p>
 <p>ライブステージページの<tt>main</tt>要素に対し、要素の内側の余白を指定する<tt>padding</tt>や背景色を指定する<tt>background-color</tt>を指定することでライブステージページの見た目に近づけていきます。さらに見出しにもスタイルを適用することでサイトの見た目をアニメ版に近づけていきます。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：コンテンツ */
-#ll-livestage-page main {
+#ll-livestage-page-contents {
   padding: 1em 0;
   background-color: #dcdcdc;
 }
@@ -194,7 +208,7 @@
 </pre>
 </div>
 
-<h2><a id="h5-6"></a><span class="secno">5.6　</span>アーティスト名と曲名部分の見た目を整える</h2>
+<h2><a id="h5-7"></a><span class="secno">5.7　</span>アーティスト名と曲名部分の見た目を整える</h2>
 <p>アーティスト名と曲名部分にスタイルを適用していきます。アーティスト名部分は背景が白で上下に黄色い線が引かれているという見た目です。こちらは背景色として白色を示す<tt>#fff</tt>を指定します。黄色い線に関しては上下に<tt>border</tt>プロパティでスタイルを定義することにより再現可能です。</p>
 <p>曲名の左右にある括弧は、特にHTML内へ書いておく必要がないため<tt>::before</tt>と<tt>::after</tt>という擬似要素を使ってCSS側で追加します。</p>
 <div class="emlist-code">
@@ -217,7 +231,7 @@
 </pre>
 </div>
 
-<h2><a id="h5-7"></a><span class="secno">5.7　</span>動画部分の見た目を整える</h2>
+<h2><a id="h5-8"></a><span class="secno">5.8　</span>動画部分の見た目を整える</h2>
 <p>動画部分にスタイルを適用していきます。YouTubeの動画をページ内へ埋め込んでいますが、初期状態だとウィンドウ幅を狭めた場合に動画が収まりきらない状態で表示されてしまいます。そのためCSSで動画をウィンドウ幅内へ収まるように調整します。</p>
 <p>ライブステージページへYouTubeの動画を埋め込んだときに動画を<tt>div</tt>要素で囲みました。その<tt>div</tt>要素に指定している<tt>ll-live-video</tt>というクラスにCSSでアスペクト比を設定します。動画部分の<tt>iframe</tt>要素に対し絶対配置にする<tt>position: absolute;</tt>を指定した上で幅と高さを100％にすることにより、動画が収まって表示されます。</p>
 <div class="emlist-code">
@@ -239,7 +253,7 @@
 </pre>
 </div>
 
-<h2><a id="h5-8"></a><span class="secno">5.8　</span>動画の情報を表示している要素の見た目を整える</h2>
+<h2><a id="h5-9"></a><span class="secno">5.9　</span>動画の情報を表示している要素の見た目を整える</h2>
 <p>動画の情報を表示している要素に対しスタイルを適用していきます。はじめにウィンドウ幅を狭くしたとき、余白が上下に空くよう<tt>margin</tt>を定義します。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：動画の情報 */
@@ -275,13 +289,14 @@
   color: #ff188b;
 }
 
-.ll-video-tabs &gt; .ll-active &gt; a {
+.ll-video-tabs &gt; .ll-active &gt; a:link,
+.ll-video-tabs &gt; .ll-active &gt; a:visited {
   color: #555;
 }
 </pre>
 </div>
 
-<h2><a id="h5-9"></a><span class="secno">5.9　</span>動画の情報部分の見た目をウィンドウ幅ごとに整える</h2>
+<h2><a id="h5-10"></a><span class="secno">5.10　</span>動画の情報部分の見た目をウィンドウ幅ごとに整える</h2>
 <p>動画の情報部分の見た目を整えたら、今度はウィンドウ幅ごとに整えていきます。特にタブ内の文字はウィンドウ幅を小さくしていくとタブからはみ出して表示されます。文字がはみ出すのを防ぐため細かく文字サイズを調整しています。</p>
 <p>他のスタイルは主にタブレットやPCで見たとき、グローバルナビゲーションと同じような見た目になるようスタイル定義しています。</p>
 <div class="emlist-code">
@@ -296,7 +311,13 @@
     border-right: 0;
   }
 
-  .ll-video-detail .ll-video-tabs &gt; li.ll-active::after {
+  .ll-video-detail .ll-video-tabs &gt; .ll-active &gt; a {
+    border-width: 0 1px 0 0;
+    background-color: #ff50ac;
+    color: #fff;
+  }
+
+  .ll-video-detail .ll-video-tabs &gt; .ll-active::after {
     content: &quot;&quot;;
     display: block;
     position: absolute;
@@ -304,12 +325,6 @@
     left: 0;
     width: 100%;
     border-bottom: 3px solid #ffdc00;
-  }
-
-  .ll-video-detail .ll-video-tabs &gt; li.ll-active &gt; a {
-    border-bottom: 0;
-    background-color: #ff50ac;
-    color: #fff;
   }
 }
 @media (min-width: 992px) {
@@ -325,7 +340,7 @@
 </pre>
 </div>
 
-<h2><a id="h5-10"></a><span class="secno">5.10　</span>広告部分の見た目を整える</h2>
+<h2><a id="h5-11"></a><span class="secno">5.11　</span>広告部分の見た目を整える</h2>
 <p>最後に広告部分の見た目を整えます。ここはある程度Bootstrapによって整えられているため、最低限のスタイルを適用するだけです。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：広告 */
@@ -340,7 +355,7 @@
 </pre>
 </div>
 
-<h2><a id="h5-11"></a><span class="secno">5.11　</span>CSSのまとめ</h2>
+<h2><a id="h5-12"></a><span class="secno">5.12　</span>CSSのまとめ</h2>
 <p>ここまでをまとめると、次のCSSになります。</p>
 <div class="emlist-code">
 <pre class="emlist">/* ライブステージページ：コンテンツ */
@@ -419,7 +434,8 @@
   color: #ff188b;
 }
 
-.ll-video-tabs &gt; .ll-active &gt; a {
+.ll-video-tabs &gt; .ll-active &gt; a:link,
+.ll-video-tabs &gt; .ll-active &gt; a:visited {
   color: #555;
 }
 /* ライブステージページ：動画の情報タブの各ウィンドウ幅ごとのスタイル定義 */
